@@ -1,15 +1,0 @@
-*~
-*stackdump
-Build
-MYMETA.json
-MYMETA.yml
-Makefile*
-_build
-blib
-pm_to_blib
-yote.pid
-*.gz
-MANIFEST.*bak
-META.*
-yote_root/html/js/local.js
-
