@@ -1,3 +1,13 @@
+2013-05-26  Eric Wolf  <coyocanid@gmail.com>
+
+	* yote.util.js - control_table new entry can now have more than textbox; Rather than a fieldname, an object can be used
+	* server_docs.html - content update
+	* samples.html - minor content update
+	* index.html - changed chat box to textarea
+	* admin.html - changed new news entry to textarea
+	* Obj.pm - set_ now returns the value that was set to
+	* sqlite.t - updated test to check set_ return value
+
 2013-05-21  Eric Wolf  <coyo@gmail.com>
 
 	* yote.util.js update - the table tag is now optional, allowing the output to be a horizontal list, for example
